# LAN-game-of-plus-minus

./: .gitignore  CMakeLists.txt  README.md  game_history.json
Client/: Client.cpp
Server/: Server.cpp
tests/: server_tests.cpp
